feat: mise à jour de la documentation Swagger
 Modification des schémas des endpoints pour correspondre aux nouvelles spécifications
- Ajout des descriptions manquantes pour certains paramètres
- Mise à jour des exemples de réponses
- Correction de petites erreurs dans la documentation existante
