# storage/api-docs/api-docs.json
@@ -1,10 +1,12 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "API Documentation",
-        "description": "Documentation for the API endpoints",
+        "title": "Demo of Pharmaceutical Inventory Management",
+        "description": "This project is a demonstration of an API for pharmaceutical inventory management.",
         "contact": {
-            "email": "support@example.com"
+            "name": "Samuel ANYARONKE",
+            "url": "https://main--dare-samuel.netlify.app/",
+            "email": "samuel.anyaronke@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
